<resources>
    <string name="app_name">Urban Juara</string>
    <string name="user_name">Username</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="password">Password</string>
    <string name="masukkan_password">Masukan Password</string>
    <string name="masuk">Masuk</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="pengguna_baru">Pengguna Baru? Buat Akun</string>
    <string name="mebuat_akun">Membuat Akun \nPengguna Baru</string>
    <string name="masukkan_kode_unik">Masukan Kode Unik \nyang Kami Kirim</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="contoh_nomor">Cth. +6281331723XXX</string>
    <string name="persyaratan">Saya menyetujui syarat dan ketentuan aplikasi Urban Juara</string>
    <string name="daftar">Daftar</string>
    <string name="hai_home">Hai, Urban Juara</string>
    <string name="text_saldo">Saldo point anda</string>
    <string name="menu_home">Home</string>
    <string name="menu_riwayat">Riwayat</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="point_masuk">Point Masuk</string>
    <string name="point_keluar">Point Keluar</string>
    <string name="tanggal">12 Jul 2021</string>
    <string name="point">+10</string>
    <string name="profile">Profile</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="email">E-mail</string>
    <string name="bergabung">Bergabung Sejak</string>
    <string name="ubah_profile">Ubah Profile</string>
    <string name="saldo_point">Saldo Point Anda</string>
    <string name="berlaku">Berlaku Sampai</string>
    <string name="home_point">1100</string>
    <string name="tukar_poin">Tukar Point</string>
    <string name="lokasi_bank">Lokasi Bank</string>
    <string name="kenali_sampah">Kenali Sampah</string>
    <string name="website">Website</string>
    <string name="tukar_point_mu_dengan">Tukar Pointmu Dengan</string>
    <string name="tukar_poinmu">Tukar Pointmu Dengan</string>
    <string name="vc_ojek">Voucher Ojek Online</string>
    <string name="vc_tempat_makan">Tempat makan</string>
    <string name="vc_spbu">Voucher SPBU</string>
    <string name="vc_parkir">Voucher Parkir</string>
    <string name="vc_laundry">Voucher Laundry</string>
    <string name="vc_belanja">Voucher Belanja</string>
    <string name="s_dan_k">S&amp;K berlaku</string>
    <string name="ojek_5km">Ojek 5 KM</string>
    <string name="ojek_10km">Ojek 10 KM</string>
    <string name="text_poin">poin</string>
    <string name="poin_ojek50">50</string>
    <string name="poin_ojek100">100</string>
    <string name="tukar_poin_dengan">Tukar Poin dengan</string>
    <string name="anda_menukar_point">Anda Menukar Point Dengan</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="jumlah_point">Jumlah Poin</string>
    <string name="tukar_point">Tukar Poin</string>
    <string name="kenali">Kenali</string>
    <string name="sampahmu">Sampahmu</string>
    <string name="sampah_yang_dapat_ditukar">Sampah yang dapat ditukar di Bank Sampah Urban Juara sebagai berikut :</string>
    <string name="sampah_plastik">Sampah\nPlastik</string>
    <string name="sampah_kertas">Sampah\nKertas</string>
    <string name="sampah_pecah_belah">Sampah\nPecah Belah</string>
    <string name="sampah_organik">Sampah\nOrganik</string>
    <string name="sampah_kardus">Sampah\nKardus</string>
    <string name="sampah_kaleng">Sampah\nKaleng</string>
    <string name="sampah_b3">Sampah\nB3</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="ubah_pengaturan">Ubah Pengaturan</string>
    <string name="membuat_profile">Membuat Profile</string>
    <string name="laki_laki">Laki Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="simpan">Simpan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="tidak_menerima_kode">Tidak Menerima Kode? kirimg ulang</string>
    <string name="lokasi">Lokasi</string>
    <string name="bank_sampah">Bank sampah</string>
    <string name="botol_plastik">Botol Plastik</string>
    <string name="kantong_plastik">Kantong Plastik</string>
    <string name="gelas_plastik">Gelas Plastik</string>
    <string name="mika_makanan">Mika Makanan</string>
    <string name="alat_dapur">Alat Dapur Plastik</string>
    <string name="kantong_makanan">Kantong Makanan</string>
    <string name="tutup_botol">Tutup Botol</string>
    <string name="mainan_plastik">Mainan Plastik</string>
    <string name="sampah_plstik_detail">Sampah Plastik</string>
    <string name="cari_kecamatan">Cari Kecamatan</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="urban_juara_app">Urban Juara App</string>
    <string name="tentang">Tentang</string>
    <string name="keluar">Keluar</string>
</resources>