<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="84dp"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:cardCornerRadius="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center">

                <ImageView
                    android:id="@+id/point_icon"
                    android:layout_width="@dimen/icon_point_size"
                    android:layout_height="@dimen/icon_point_size"
                    android:src="@drawable/ic_point_masuk" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/txt_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point_masuk"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txt_tanggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_jumlah_point"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/point"
                android:gravity="center"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>